ViTables ChangeLog
==================
** December 04, 2009 **
pluginsManager module has been refactored to improve some bizarre behavior.

Usability of csv_import plugin has been improved with better dialog texts.

** December 03, 2009 **
Autodetection of tables headers has been added to the import csv plugin.

** December 02, 2009 **
Support for tables headers has been added to the import/export csv plugins.

** November 30, 2009 **
The import_csv.py plugin has been debugged, refactored and enhanced.

** November 28, 2009 **
New version of import_csv.py plugin added to repository.

** November 25, 2009 **
Minor problems introduced in recent changes have been fixed.

** November 24, 2009 **
Import capabilities added to the CSV plugin.

vtapp.py module changed to make easier interaction with plugins.

** November 23, 2009 **
Layout of csv plugin changed to allow future additions; modules, icons,...

Plugin export_csv.py enhanced: better code, reduced memory footprint.

** November 22, 2009 **
Memory footprint greatly reduced.

** November 20, 2009 **
Fixed a bug in the datasheet.py module apparent with pyqt < 4.6.

** November 13, 2009 **
Support for queries has been updated.

dataSheet.py module has been refactored. 

leafView.py module has been refactored.

Plugins have been updated.

Querying functionality has been moved from vtapp.py to queriesManager.py.

dataSheet.py module has been refactored. Circular references have been removed.

Fixed a bug in the Preferences dialog.

** November 10, 2009 **
Fixed a bug in the Preferences dialog.

** November 08, 2009 **
Fixed a bug in the tree of databases that was not apparent in PyQt <=4.4.4.

The path of the config. file on Unix systems now adheres to the Qt standards.

** September 25, 2009 **
Fixed a minor bug in the code for opening files via drag and drop.

** September 22, 2009 **
Last improvements in the documentation style applied to Windows platforms.

Fixed an annoyance in the creation of PDF documentation.
